fixed the extra white space in map sidebar

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -342,10 +342,7 @@ textarea, input[type="text"] {
   border-radius: 0px 0px 6px 6px;
 }
 
-/*dumb shit for fitting button group*/
-.map-wrapper .btn-group {
-  margin-right:-1px;
-}
+
 /*dumb shit for fitting button group again*/
 #sidebar {
   padding-left:14px;
@@ -485,6 +482,10 @@ textarea, input[type="text"] {
     padding-left:0px;
     padding-right:0px;
   }
+  /*dumb shit for fitting button group*/
+  .map-wrapper .btn-group {
+    margin-right:3px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -497,5 +498,8 @@ textarea, input[type="text"] {
   #report-wrapper {
     margin-left:25px;
     margin-right:25px;
+  }
+  .map-wrapper .btn-group {
+    margin-right:-1px;
   }
 }
